--- a/shopping.html
+++ b/shopping.html
@@ -22,31 +22,31 @@
         <h2>Shopping</h2>  
         <div class="product-container">    
             <div class="product">    
-                <h3>Course 1</h3>    
+                <h3>Front end development course</h3>    
                 <p>Price: $30.00</p>    
                 <input type="number" min="1" value="1" id="quantity1">    
                 <button onclick="addToCart(30.00, 'Course 1', 'quantity1')">Add to shopping cart</button>    
             </div>    
             <div class="product">    
-                <h3>Course 2</h3>    
+                <h3>backend development course”</h3>    
                 <p>Price: $50.00</p>    
                 <input type="number" min="1" value="1" id="quantity2">    
                 <button onclick="addToCart(50.00, 'Course 2', 'quantity2')">Add to shopping cart</button>    
             </div>    
             <div class="product">    
-                <h3>Course 3</h3>    
+                <h3>Mid end Development Course</h3>    
                 <p>Price: $80.00</p>    
                 <input type="number" min="1" value="1" id="quantity3">    
                 <button onclick="addToCart(80.00, 'Course 3', 'quantity3')">Add to shopping cart</button>    
             </div>  
             <div class="product">    
-                <h3>Course 4</h3>    
+                <h3>Network Security course</h3>    
                 <p>Price: $100.00</p>    
                 <input type="number" min="1" value="1" id="quantity4">    
                 <button onclick="addToCart(100.00, 'Course 4', 'quantity4')">Add to shopping cart</button>    
             </div>  
             <div class="product">    
-                <h3>Course 5</h3>    
+                <h3>Customer Communication Course</h3>    
                 <p>Price: $150.00</p>    
                 <input type="number" min="1" value="1" id="quantity5">    
                 <button onclick="addToCart(150.00, 'Course 5', 'quantity5')">Add to shopping cart</button>    
