--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body>  
     <header>  
         <nav>  
+              <div class="logo">
+                <img src="logo.png" alt="LeTian International Shopping Platform Logo">
+            </div>
             <ul>  
                 <li><a href="index.html">Homepage</a></li>  
                 <li><a href="about.html">About Us</a></li>
